argocd/apps/raspberry/base/hello-app1/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app1
  annotations:
    linkerd.io/inject: enabled
  labels:
    app: hello-app1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-app1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hello-app1
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 3
          failureThreshold: 20
---
