argocd/apps/raspberry/base/hello-app1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app1
  namespace: test
spec:
  externalTrafficPolicy: Cluster
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: hello-app1
